# tokuye

./: .gitignore  404.html  README.md  THIRD_PARTY_NOTICES  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
advanced/custom-prompt/: index.html
advanced/usage/: index.html
configuration/global-config/: index.html
configuration/mcp/: index.html
configuration/phase-model/: index.html
configuration/project-config/: index.html
contributing/: index.html
docs/: contributing.md  index.md  philosophy.md  roadmap.md
docs/advanced/: custom-prompt.md  usage.md
docs/configuration/: global-config.md  mcp.md  phase-model.md  project-config.md
docs/features/: issue-management.md  repository-analysis.md  state-machine-mode.md  tui.md
docs/getting-started/: installation.md  prerequisites.md  quickstart.md
features/issue-management/: index.html
features/repository-analysis/: index.html
features/state-machine-mode/: index.html
features/tui/: index.html
getting-started/installation/: index.html
getting-started/prerequisites/: index.html
getting-started/quickstart/: index.html
philosophy/: index.html
roadmap/: index.html
search/: search_index.json
src/tokuye/: __init__.py  main.py
src/tokuye/agent/: epic_manager_agent.py  epic_worker_agent.py  node_agents.py  state_machine.py  strands_agent.py
src/tokuye/mcp/: __init__.py  client_manager.py
src/tokuye/mcp_manager/: __init__.py  client_manager.py
src/tokuye/prompts/: developer_to_pr_creator_prompt.md  developer_to_pr_creator_prompt_ja.md  plan_to_developer_prompt.md  prompt_loader.py  state_classifier_prompt.md  state_classifier_prompt_en.md  summary_prompt.md  summary_prompt_en.md  system_prompt.md  system_prompt_developer.md  system_prompt_devstral.md  system_prompt_en.md  system_prompt_epic_manager.md  system_prompt_epic_manager_en.md  (+8 more)
tests/: test_config.py
(+52 files in other folders)
